<resources>
    <string name="app_name">MatchMatch</string>
    <string name="match_match">MatchMatch</string>
    <string name="app_tag">Play, flip, match - enjoy endless fun with our Flip Card game</string>
    <string name="select_diff_level">Select Difficulty Level</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="expert">Expert</string>
    <string name="flips">Flips :</string>
    <string name="cards_matched">Cards Matched :</string>
</resources>